--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,9 @@
+*{
+    padding: 0;
+    margin: 0;
+}
 body{
     background-color: #FFF3E7;
-    margin: 0;
 }
 
 header{
@@ -154,3 +157,46 @@ p{
     margin-left: 20px;
 }
 
+@media only screen and (min-width: 676px){
+
+    /* para media query*/
+    #container > div{
+    display: flex;
+    }
+
+    .nameLogo {
+        width: 50%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .secLogin{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 8.3%;
+    width: 50%;
+    margin-bottom: 8.3%;
+    margin: 0p;
+    justify-content: center;
+    align-content: center;
+    }
+
+    .secRegister{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 4.3%;
+        width: 50%;
+        margin-bottom: 4.3%;
+        margin: 0p;
+        justify-content: center;
+        align-content: center;  
+    }
+
+    .formRegister{
+        align-items: center;
+    }
+
+
+}
