--- a/src/style.css
+++ b/src/style.css
@@ -165,49 +165,6 @@ p{
     margin-left: 20px;
 }
 
-@media only screen and (min-width: 676px){
-
-    /* para media query*/
-    #container > div{
-    display: flex;
-    }
-
-    .nameLogo {
-        width: 50%;
-        display: flex;
-        justify-content: center;
-    }
-
-    .secLogin{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 8.3%;
-    width: 50%;
-    margin-bottom: 8.3%;
-    margin: 0p;
-    justify-content: center;
-    align-content: center;
-    }
-
-    .secRegister{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-top: 4.3%;
-        width: 50%;
-        margin-bottom: 4.3%;
-        margin: 0p;
-        justify-content: center;
-        align-content: center;  
-    }
-
-    .formRegister{
-        align-items: center;
-    }
-
-
-}
 
 /*login btn*/
 .container-password-login{
@@ -277,3 +234,48 @@ p{
 .container-repeat-password{
     display: flex;
 }
+
+/* @media only screen and (min-width: 676px){
+
+    para media query
+    #container > div{
+    display: flex;
+    
+    } */
+
+    /* .nameLogo {
+        width: 50%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .secLogin{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 8.3%;
+    width: 50%;
+    margin-bottom: 8.3%;
+    margin: 0p;
+    justify-content: center;
+    align-content: center;
+    }
+
+    .secRegister{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 4.3%;
+        width: 50%;
+        margin-bottom: 4.3%;
+        margin: 0p;
+        justify-content: center;
+        align-content: center;  
+    }
+
+    .formRegister{
+        align-items: center;
+    } */
+
+
+/* } */
