--- a/src/style.css
+++ b/src/style.css
@@ -235,13 +235,13 @@ p{
     display: flex;
 }
 
-/* @media only screen and (min-width: 676px){
+@media only screen and (min-width: 676px){
 
-    para media query
+    /* para media query */
     #container > div{
     display: flex;
     
-    } */
+    }
 
     /* .nameLogo {
         width: 50%;
@@ -278,4 +278,4 @@ p{
     } */
 
 
-/* } */
+}
