--- a/src/style.css
+++ b/src/style.css
@@ -62,14 +62,20 @@ h2 {
 .emaillogin{
     width: 270px;
     height: 36px;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 0px 4px 4px rgb(98 68 47 / 16%);
 }
 
 .passwordLogin{
     width: 230px;
     height: 36px;
+    border: none;
+    border-radius: 10px 0px 0px 10px;
+    box-shadow: 0px 4px 4px rgb(98 68 47 / 16%);
 }
 
-label{
+.datosForm{
     display: flex;
     align-items: center;
     width: 270px;
@@ -112,7 +118,7 @@ legend{
     background: #C29650;
     border-radius: 100px;
     margin-top: 15px;
-
+    border:none;
     font-family: 'Lato';
     font-weight: 700;
     font-size: 22px;
@@ -127,9 +133,9 @@ legend{
 .btnLoginGoogle, .btnRegisterGoogle{
     width: 287px;
     height: 50px;
-    border: 1px solid #62442F;
+    border: 2px solid #62442F;
     border-radius: 100px;
-
+    background:none;
     font-family: 'Lato';
     font-weight: 600;
     font-size: 20px;
@@ -187,17 +193,23 @@ p{
 
 .button-password-login{
     width: 40px;
-    height: 40px;
+    height: 37px;
     display: flex;
     align-items: center;
     justify-content: center;
-
+    border: none;
+    background-color: #C29650;
+    border-radius: 0px 10px 10px 0px;
+    box-shadow: 0px 4px 4px rgb(98 68 47 / 16%);
 }
 
 /*btn register*/
 .userName, .emailRegister{
     width: 260px;
     height: 28px;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 0px 4px 4px rgb(98 68 47 / 16%);
 }
 
 
@@ -212,15 +224,22 @@ p{
 .passwordRegister, .passwordRepeatRegister {
     width: 260px;
     height: 28px;
+    border: none;
+    border-radius: 8px 0px 0px 8px;
+    box-shadow: 0px 4px 4px rgb(98 68 47 / 16%);
 }
 
 .btn-passwor-register{
     width: 40px;
-    height: 33px;
+    height: 28.5px;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    border: none;
+    background-color: #C29650;
+    border-radius: 0px 8px 8px 0px;
+    box-shadow: 0px 4px 4px rgb(98 68 47 / 16%);
 }
 
 .img-password-register{
@@ -238,6 +257,235 @@ p{
 
 .container-repeat-password{
     display: flex;
+}
+
+.checkbtn{
+    float:right;
+    display:block;
+    margin-right: 20px;
+}
+
+nav{
+ background-color: #DC7A5D;
+ height: 75px;
+ width: 100vw;
+ display: flex;
+ flex-direction: row-reverse;
+ justify-content: space-between;
+ align-items: center;
+ box-shadow: 0px 4px 4px rgba(98, 68, 47, 0.11);
+ border: white;    
+}
+
+.logoComplete{
+    display: flex;
+}
+
+.logoNav{
+    height: 54px;
+    padding: 0 8px 0 12px;
+}
+
+.logoNameNav{
+    display: flex;
+    font-family: 'League Spartan';
+    font-size: 30px;
+    color: #62442F;
+    font-weight: 800;
+    padding-top: 8px;
+    align-items: center;
+}
+
+nav .menuTop {
+    position:fixed;
+    display:flex;
+    background-color:#F7C67E;
+    list-style: none;
+    width: 100vw;
+    height: 100vh;
+    top:75px;
+    left:-100%;
+    text-align: center;
+    transition: all .4s;
+    flex-direction: column;
+}
+
+.menuLeft{
+    display: none;
+}
+
+nav .menuTop li{
+    margin: 20px 5px 0px 5px;
+
+}
+
+nav .menuTop li a, .search{
+    color:#FFF3E7; 
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-family: 'Montserrat';
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.icon{
+    margin-right: 10px;
+    height: 44px;
+}
+
+.searchInput{
+    height: 35px;
+    font-family: 'Montserrat';
+    color:rgba(145, 111, 88, 1);
+    font-size: 18px;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-weight: 500;
+    border-radius: 100px;
+    background: #FFF3E7;
+    border:none;
+}
+
+.searchInput::placeholder{
+color:rgba(145, 111, 88, 1);
+font-weight: 500;
+}
+
+/* nav ul li:hover, li:active {
+background-color: #FFF3E7;
+color:#DC7A5D;
+} */
+
+#check{
+    display:none;
+} 
+
+#check:checked ~ ul{
+    left: 0%;
+}
+
+.postAddBtn{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 310px;
+    margin: 0px auto;
+}
+
+.addPost{
+    height: auto;
+    width: 310px;
+    background: #FFFFFF;
+    font-family: 'Montserrat';
+    border: 1px solid #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(98, 68, 47, 0.11);
+    border-radius: 13px;
+    display: flex;
+    padding: 20px 0px 0px 15px;
+    margin: 20px auto;
+    box-sizing: border-box;
+    resize: none;
+}
+
+.addPost::placeholder{
+    color:rgba(145, 111, 88, 1);
+    font-weight: 500;
+    }
+
+.btnPost{
+    width: 111px;
+    height: 37px;
+    font-family: 'Montserrat';
+    font-weight: 700;
+    font-size: 18px;
+    display: flex;
+    color: #FFF3E7;
+    background: #C29650;
+    border-radius: 100px;
+    align-items: center;
+    justify-content: center;
+    border:none;
+}
+
+.postComplete{
+    width: 310px;
+    height: auto;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(98, 68, 47, 0.16);
+    border-radius: 11px;
+    display: flex;
+    flex-direction: column;
+    margin: 20px auto;
+    font-family: 'Montserrat';
+    font-weight: 500;
+    font-size: 18px;
+    padding: 18px;
+    box-sizing: border-box;
+}
+
+.userNameDots{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 15px;
+}
+
+.userNamePost{
+    display: flex;
+    align-items: center;
+    color: #62442F;
+    flex-grow: 50;
+    padding-left: 10px;
+}
+
+.dots{
+    height: 13px;
+    margin-left: 20px;
+    flex-grow: 1;
+}
+
+.postDescription{
+    display: flex;
+    align-items: center;
+    height: auto;
+    padding: 30px 10px;
+}
+
+.likeComment{
+    display: flex;
+    justify-content: space-around;
+}
+
+.likeContainer{
+    display: flex;
+    align-items: center;
+}
+.likeIcon{
+    height: 35px;
+    margin-right: 10px;
+}
+
+.likeNumber{
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.btnComment{
+    border: 1px solid #62442F;
+    border-radius: 100px;
+    font-family: 'Lato';
+    font-weight: 500;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #62442F;  
+    background: none;
+    padding: 8px 10px;
 }
 
 @media only screen and (min-width: 676px){
@@ -262,6 +510,78 @@ p{
         width: 50%;
         justify-content: center;
         align-content: center;
+    }
+
+    .checkbtn{
+        display:none;
+    }
+
+    nav{
+        flex-direction: row;    
+    }
+    
+    .logoNav{
+        height: 54px;
+        padding: 0 20px;
+    }
+    
+    .home, .profile{
+    display:none;
+    }
+
+    nav .menuTop{
+    flex-direction: row;
+    position:initial;
+    background: none;
+    height: auto;
+    top: 0px;
+    left:0px;
+    width: auto;
+    justify-content: flex-end;
+    margin-right: 20px;
+    align-items: center;
+    box-sizing: border-box;
+    }
+
+    nav .menuTop li{
+    padding: 0px 20px 0px 0px;
+    margin: 0px;
+    }
+
+    .searchInput{
+    margin-right: 20px;
+    }
+
+    nav .menuLeft {
+    position:fixed;
+    display:flex;
+    background-color:#F7C67E;
+    width: 73px;
+    height: 100vh;
+    top:75px;
+    text-align: center;
+    flex-direction: column;
+    padding-top: 10px;
+    }
+    
+    nav .menuLeft li{
+        margin: 10px auto;
+        list-style: none;
+    }
+    .icon{
+    margin:0px;
+    }
+
+    .postAddBtn{
+    width: 500px;
+    }
+
+    .addPost{
+    width: 500px;
+    }
+
+    .postComplete{
+        width: 500px;
     }
 
 }
