--- a/src/style.css
+++ b/src/style.css
@@ -52,6 +52,53 @@ h2 {
     background-color: #DC7A5D;
 
 }
+#warning{
+    display:none;
+}
+
+#warningLogin{
+display: none;
+}
+
+.warning{
+    position: fixed;
+    background-color:#916F58;
+    height: 200px;
+    width: 350px;
+    font-size: 30px;
+    border: 2px solid #c29650;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    transition: .3s;
+}
+
+.cerrar{
+    display: flex;
+    width: 23px;
+    justify-content: center;
+    align-items: center;
+    background-color: #c29650;
+    border: 1px solid #c29650;;
+    color: #fff3e7;
+    font-weight: 600;
+    border-radius: 3px;
+    margin-right: 15px;
+}
+
+.gatitoWarning{
+    height: 80px;
+    display: flex;
+    margin: 0px auto;
+}
+
+.warningText{
+    color: #FFF3E7;
+    margin: 0px auto;
+    margin-top: 20px;
+}
 
 .formLogin, .formRegister{
     display: flex;
