--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,6 @@ body{
 }
 
 header{
-    position: fixed;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -52,7 +51,7 @@ h2 {
 .secHome{
     display: flex;
     flex-direction: column;
-    margin: 90px auto;
+    margin: 10px auto;
     width: 100vw;
 }
 
@@ -588,6 +587,10 @@ color:#DC7A5D;
         justify-content: center;
     }
 
+   .headerHome{
+        position: fixed;
+    }
+
     .secLogin{
         width: 50%;
         justify-content: center;
@@ -598,6 +601,13 @@ color:#DC7A5D;
         width: 50%;
         justify-content: center;
         align-content: center;
+    }
+
+    .secHome{
+        display: flex;
+        flex-direction: column;
+        margin: 90px auto;
+        width: 100vw;
     }
 
     .checkbtn{
