modal publicar post

--- a/src/style.css
+++ b/src/style.css
@@ -36,7 +36,6 @@ h2 {
     align-items: center;
     padding-bottom: 20px;
     text-align: center;
-
     color: #FFF3E7;
 
 }
@@ -51,8 +50,8 @@ h2 {
 .secHome{
     display: flex;
     flex-direction: column;
-    margin: 10px auto;
-    width: 100vw;
+    margin: 0px auto;
+    width: 100%;
 }
 
 
@@ -180,7 +179,6 @@ legend{
     display: flex;
     align-items: center;
     justify-content: center;
-
     color: #FFF3E7;
 
 }
@@ -198,7 +196,6 @@ legend{
     align-items: center;
     justify-content: center;
     margin-bottom: 10px;
-
     color: #62442F;
 }
 
@@ -215,7 +212,6 @@ p{
     display: flex;
     align-items: center;
     text-align: center;
-
     color: #62442F;
 }
 
@@ -321,15 +317,15 @@ p{
 }
 
 nav{
- background-color: #DC7A5D;
- height: 75px;
- width: 100vw;
- display: flex;
- flex-direction: row-reverse;
- justify-content: space-between;
- align-items: center;
- box-shadow: 0px 4px 4px rgba(98, 68, 47, 0.11);
- border: white;    
+    background-color: #DC7A5D;
+    height: 75px;
+    width: 100%;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0px 4px 4px rgba(98, 68, 47, 0.11);
+    border: white;    
 }
 
 .logoComplete{
@@ -411,8 +407,8 @@ nav .menuTop li a, .search{
 }
 
 .searchInput::placeholder{
-color:rgba(145, 111, 88, 1);
-font-weight: 500;
+    color:rgba(145, 111, 88, 1);
+    font-weight: 500;
 }
 
 /* nav ul li:hover, li:active {
@@ -435,29 +431,90 @@ color:#DC7A5D;
 
 .formPost{
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    justify-content: center;
+    margin: 0px 0px;
 }
 
 .addPost{
     height: auto;
-    width: 310px;
+    width: 100%;
     background: #FFFFFF;
     font-family: 'Montserrat';
     border: 1px solid #FFFFFF;
     box-shadow: 0px 4px 4px rgba(98, 68, 47, 0.11);
     border-radius: 13px;
     display: flex;
-    padding: 20px 0px 0px 15px;
+    padding: 10px 0px 10px 15px;
     margin: 20px auto;
     box-sizing: border-box;
     resize: none;
+    color: #916f58;
 }
 
 .addPost::placeholder{
     color:rgba(145, 111, 88, 1);
     font-weight: 500;
-    }
+}
+
+.backgroundModal{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 0, 0, 0.288);
+    position:fixed;
+    display: flex;
+    justify-content: center;
+}
+
+.modalCreatePost{
+    width: 310px;
+    height: auto;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgb(98 68 47 / 16%);
+    border-radius: 11px;
+    display: flex;
+    flex-direction: column;
+    margin: 100px auto;
+    font-family: 'Montserrat';
+    font-weight: 500;
+    font-size: 18px;
+    padding: 18px;
+    box-sizing: border-box;
+    position:fixed;
+}
+
+.createPostTitle{
+    display:flex;
+}
+
+.modalTitle{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 10px;
+    margin: 0px auto;
+    padding-left: 25px;
+}
+
+.cerrarModalPost{
+    position: relative;
+    width: 23px;
+    background-color: #c29650;
+    border: 1px solid #c29650;;
+    color: #fff3e7;
+    font-weight: 600;
+    border-radius: 3px;
+    margin-bottom: 10px;
+}
+
+.iconCatImg {
+    height: 30px;
+}
+
+.btnCatImg {
+    border: none;
+    background: none;
+    display: flex;
+    margin: 15px 0px;
+}
 
 .btnPost{
     width: 111px;
@@ -472,6 +529,7 @@ color:#DC7A5D;
     align-items: center;
     justify-content: center;
     border:none;
+    margin: 0px auto;
 }
 
 .postComplete{
@@ -642,7 +700,7 @@ color:#DC7A5D;
     .secHome{
         display: flex;
         flex-direction: column;
-        margin: 90px auto;
+        margin: 0px auto;
         width: 100vw;
     }
 
@@ -651,7 +709,8 @@ color:#DC7A5D;
     }
 
     nav{
-        flex-direction: row;    
+        flex-direction: row;   
+        width: 100vw; 
     }
     
     .logoNav{
@@ -726,14 +785,23 @@ color:#DC7A5D;
         left:38px;
     }
 
+    .formPost{
+        margin: 40px 0px;
+    }
+
     .postAddBtn{
     width: 500px;
+    margin: 75px auto;
     }
+
 
     .addPost{
-    width: 500px;
+    width: 100%;
     }
 
+    .modalCreatePost{
+        width: 500px;
+    }
     .postComplete{
         width: 500px;
     }
