--- a/src/style.css
+++ b/src/style.css
@@ -705,6 +705,10 @@ color:#DC7A5D;
         cursor: pointer;
     }
     
+.imagePost{
+        width: 400px;
+        margin:15px auto;
+}
 
 @media only screen and (min-width: 676px){
 
